2007-08-07  Martin Leidig  <mleidig@schlund.de>

	Added missing IWrapper runtime information for auth- and aux-wrappers.

	* src/de/schlund/pfixcore/generator/IWrapperInfo.java
	* src/de/schlund/pfixcore/workflow/app/DefaultAuthIWrapperState.java
	* src/de/schlund/pfixcore/util/TransformerCallback.java
	* src/de/schlund/pfixxml/config/PageRequestConfig.java
	* src/de/schlund/pfixxml/config/IWrapperConfig.java
	* src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java

2007-08-03  termi  <termi@prometheus.local.marsching.com>

	* src/de/schlund/pfixxml/resources/ResourceUtil.java: 
	Replace spaces in URIs with %20s.

2007-08-02  jtl  <jtl@schlund.de>

	* projects/core/xsl/forminput.xsl: Added <pfx:externalform href="..."> template to route an external form
	over the deref server.
	Changed checking of IWrapper and their parameters to use the new runtime checking via callbacks (see below).
	This will now also work for parameter names that are constructed at runtime (e.g. indexed parameters)
	* projects/core/xsl/master.xsl: added __formwarn template for runtime checking of the validity of 
	IWrappers and their parameters.
	Also add __sign template to go along the __enc template: __deref will now call both of them.	
	* projects/sample1/txt/pages/main_home.xml: Make a test case for the new form-over-dereferer servlet stuff
	* src/de/schlund/pfixxml/DerefServlet.java (handleLink): added the possibility to add all "remaining" submitted 
	parameters to the link that is stripped from the referer. Needed to enable to route form submits (where no final 
	link parameter with the host + all the parameters can be constructed) over the deref servlet. In this case the signing will 
	only guard the hostname.
	* src/de/schlund/pfixcore/generator/IWrapperInfo.java: "martin style" -> "other people esp. jtl" style
	* src/de/schlund/pfixcore/util/TransformerCallback.java: don't throw an Exception if a wrapper is not found, 
	just return null